test_suite/tests/macros/display_case/unknown_attribute.rs
use macros::DisplayCase;

#[derive(DisplayCase)]
#[display_case(foo = "lowercase")]
enum Test {
    Foo,
    Bar,
}

fn main() {}
